--- a/docs/blog/2019-01-28-kang.heehun@exchange-spring-boot.md
+++ b/docs/blog/2019-01-28-kang.heehun@exchange-spring-boot.md
@@ -53,7 +53,7 @@ Exchange 서버에 EWS 로 접속하여 사용자의 메일 받은편지함(Inbo
 
 * 프로젝트 내의 /src/main 폴더 아래에 컨트롤러 패키지(디렉토리)를 만들고 새 컨트롤러 클리스를 생성한다.
 
-    ![새 컨트롤러 클래스 생성](./assets/images/sbtestapp1_new_controller.png)
+    ![새 컨트롤러 클래스 생성](../assets/images/sbtestapp1_new_controller.png)
     
 * 생성된 컨트롤러 클래스에 아래 소스코드와 같이 "/ews/user/inbox" 요청핸들러를 만든다.
     ```java
@@ -243,14 +243,14 @@ autodiscoverUrl() 은 사용자의 이메일 주소를 바탕으로 Exchange 서
     $ java -jar target/sbtest01-0.0.1-SNAPSHOT.jar
     ```
 	
-	![터미널(컴맨드) 쉘에서 JAR 파일 빌드하고 실행](./assets/images/sbbuild01.gif)
+	![터미널(컴맨드) 쉘에서 JAR 파일 빌드하고 실행](../assets/images/sbbuild01.gif)
 	
 ### 2. IntelliJ 에서 JAR 파일 빌드하고 실행
 * IntelliJ에서 생성된 프로젝트를 연다.  
 * 메뉴 "Build" -> "Build Project" 를 클릭하여 프로젝트를 빌드한다.  
 * 메뉴 "Run" -> "Run 프로젝트명" 를 클릭하여 프로젝트를 실행한다.  
 
-	![IntelliJ 에서 JAR 파일 빌드하고 실행](./assets/images/sbbuild02.gif)
+	![IntelliJ 에서 JAR 파일 빌드하고 실행](../assets/images/sbbuild02.gif)
 
 ***
 
@@ -261,7 +261,7 @@ http://localhost:8080//ews/user/inbox
 
 * 아래 화면과 같이 웹브라우져에 사용자의 받은편지함 제목들이 표시된다.  
 
-	![웹브라우져에 사용자의 받은편지함 제목 표시](./assets/images/wb_exchange_inbox_subject_01.png)
+	![웹브라우져에 사용자의 받은편지함 제목 표시](../assets/images/wb_exchange_inbox_subject_01.png)
 
 ***
 
