--- a/docs/blog/2019-02-16-kang.heehun@introduce_vuetify.md
+++ b/docs/blog/2019-02-16-kang.heehun@introduce_vuetify.md
@@ -65,7 +65,7 @@ $ vue create vuetify01
 * 통합개발환경(IDE)에서 생성된 프로젝트를 연다.
 
 * Vue-CLI 가 많은 파일들을 생성해주는데, /src 폴더 이하에서 주로 작업을 하게되니 이부분을 주의 깊게 관찰하도록 한다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 소스](./assets/images/vuejs_project01.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 소스](../assets/images/vuejs_project01.png)
 
 ### 2. Vuetify 적용
 
@@ -91,7 +91,7 @@ $ npm run serve
 ### 4. 웹브라우져에서 확인
 
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
-![Vuetify를 적용한 화면](./assets/images/vuejs_project02.png)
+![Vuetify를 적용한 화면](../assets/images/vuejs_project02.png)
 
 ## IV. Vue.js 프로젝트 수정
 
@@ -144,7 +144,7 @@ export default {
 ### 2. 새로운 Vue 컴포넌트 생성
 
 * /src/components 폴더에서 "HomeView.vue" 파일을 생성한다.
-![sr/components 폴더에 HomeVue.vue 파일을 생성](./assets/images/vuejs_project06.png)
+![sr/components 폴더에 HomeVue.vue 파일을 생성](../assets/images/vuejs_project06.png)
 
 ### 3. HomeView 컴포넌트 초기화
 
@@ -214,7 +214,7 @@ export default {
 ### 4. 웹브라우져에서 확인
 
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](./assets/images/vuejs_project03.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](../assets/images/vuejs_project03.png)
 
 ### 5. 제품 데이타 추가
 
@@ -272,7 +272,7 @@ products: [
 ### 7. 웹브라우져에서 확인
 
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](./assets/images/vuejs_project04.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](../assets/images/vuejs_project04.png)
 
 ### 8. 장바구니 템플릿 수정
 * template 영역에서 두번 &lt;v-card&gt; 태그를 아래 내용으로 수정한다.
@@ -344,7 +344,7 @@ addToCart: function (product) {
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
 * 각 제품들의 "ADD CART" 버튼을 클릭하면 "My Cart Items" 아래에 추가됨을 확인 할 수 있다.
 * 각 항목마다 "가격 x 수량"으로 소계를 계산하여 표시해 주었고, "My Cart Items" 옆에에는 총계가 표시된다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](./assets/images/vuejs_project05.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](../assets/images/vuejs_project05.png)
 
 ***
 
