--- a/docs/blog/2019-01-21-kang.heehun@javascript-style-guide.md
+++ b/docs/blog/2019-01-21-kang.heehun@javascript-style-guide.md
@@ -1,7 +1,13 @@
 ---
+published: true
 title: 자바스크립트 스타일 가이드
+categories: JavaScript
+tags: [JavaScript, StyleGuide]
+layout: post
+excerpt: 본 스타일 가이드는 여러 개발자들이 협업을 통해서 자바스크립트 소스를 작성할때, 가장 깔끔하고 이해하기 쉬운 결과물을 생성하기 위해 권장하는 스타일을 모아보았다.
+comments: yes
+toc: true
 date: 2019-01-21
-description: 본 스타일 가이드는 여러 개발자들이 협업을 통해서 자바스크립트 소스를 작성할때, 가장 깔끔하고 이해하기 쉬운 결과물을 생성하기 위해 권장하는 스타일을 모아보았다.
 ---
 
 `본 스타일 가이드는 여러 개발자들이 협업을 통해서 자바스크립트 소스를 작성할때, 가장 깔끔하고 이해하기 쉬운 결과물을 생성하기 위해 권장하는 스타일을 모아보았다.`
