--- a/docs/blog/2019-01-24-kang.heehun@dev-env-setting.md
+++ b/docs/blog/2019-01-24-kang.heehun@dev-env-setting.md
@@ -1,7 +1,13 @@
 ---
+published: true
 title: 개발자 기본 개발 환경 설정
+categories: DevelopmentEnviroment
+tags: [DevelopmentEnviroment, 통합개발환경, 개발환경]
+layout: post
+excerpt: 개발자가 처음 조직 및 프로젝트에 투입되었을때, 기본적으로 수행해야 할 개발 환경 설정에 대해 기술한다.
+comments: yes
+toc: true
 date: 2019-01-24
-description: 개발자가 처음 조직 및 프로젝트에 투입되었을때, 기본적으로 수행해야 할 개발 환경 설정에 대해 기술한다.
 ---
 
 `개발자가 처음 조직 및 프로젝트에 투입되었을때, 기본적으로 수행해야 할 개발 환경 설정에 대해 기술한다.`
