--- a/docs/blog/2019-01-28-kang.heehun@exchange-spring-boot.md
+++ b/docs/blog/2019-01-28-kang.heehun@exchange-spring-boot.md
@@ -1,7 +1,13 @@
 ---
+published: true
 title: 스프링 부트 (Spring boot) 에서 Exchange 서버 연계 예제
+categories: Spring
+tags: [Spring, SpringBoot, Back-end, Exchange, REST]
+layout: post
+excerpt: 스프링 부트 기반으로 Exchange 서버를 연계하는 간단한 예제 프로그램을 만들어본다. Exchange 서버에 EWS 로 접속하여 사용자의 메일 받은편지함(Inbox)를 읽어보도록 한다.
+comments: yes
+toc: true
 date: 2019-01-28
-description: 스프링 부트 기반으로 Exchange 서버를 연계하는 간단한 예제 프로그램을 만들어본다. Exchange 서버에 EWS 로 접속하여 사용자의 메일 받은편지함(Inbox)를 읽어보도록 한다.
 ---
 
 `스프링 부트 기반으로 Exchange 서버를 연계하는 간단한 예제 프로그램을 만들어본다.
@@ -21,13 +27,13 @@ Exchange 서버에 EWS 로 접속하여 사용자의 메일 받은편지함(Inbo
 * 검색 기능에 허용가능한 제한이 없다.
 
 보다 자세한 차이점은 아래 링크에서 참고할 수 있다.  
-[Choosing between Exchange ActiveSync and EWS](https://docs.microsoft.com/en-us/previous-versions/office/developer/exchange-server-interoperability-guidance/dn144954(v%3Dexchg.140)){:target="_blank"}
+[Choosing between Exchange ActiveSync and EWS](https://docs.microsoft.com/en-us/previous-versions/office/developer/exchange-server-interoperability-guidance/dn144954(v%3Dexchg.140))
 
 ***
 
 이 글에서는 이전 글 [스프링 부트 (Spring boot) 소개]({% post_url 2019-01-25-kang.heehun@introduce-spring-boot %}) 에 이어서 진행하도록 한다.  
 만약 이전 과정을 진행하지 않았다면 sbtest01.zip 소스파일을 아래 링크에서 다운받을 수 있다.  
-<i class="nf nf-fa-archive"></i> [sbtest01.zip 소스파일]({{ "/assets/download/sbtest01.zip" | absolute_url }})
+<i class="nf nf-fa-archive"></i> [sbtest01.zip 소스파일](/assets/download/sbtest01.zip)
 
 ***
 
@@ -53,7 +59,7 @@ Exchange 서버에 EWS 로 접속하여 사용자의 메일 받은편지함(Inbo
 
 * 프로젝트 내의 /src/main 폴더 아래에 컨트롤러 패키지(디렉토리)를 만들고 새 컨트롤러 클리스를 생성한다.
 
-    ![새 컨트롤러 클래스 생성](../assets/images/sbtestapp1_new_controller.png)
+    ![새 컨트롤러 클래스 생성](/assets/images/sbtestapp1_new_controller.png)
     
 * 생성된 컨트롤러 클래스에 아래 소스코드와 같이 "/ews/user/inbox" 요청핸들러를 만든다.
     ```java
@@ -73,7 +79,7 @@ Exchange 서버에 EWS 로 접속하여 사용자의 메일 받은편지함(Inbo
     ```
     
 * 프로젝트를 실행한 뒤, 웹브라우져로 아래 링크로 접속하면 빈화면이 표시된다.  
-[http://localhost:8080/ews/user/inbox](http://localhost:8080/ews/user/inbox){:target="_blank"}
+[http://localhost:8080/ews/user/inbox](http://localhost:8080/ews/user/inbox)
 
 ### 2. 컨트롤러 클래스에 StringBuilder 추가
 
@@ -243,14 +249,14 @@ autodiscoverUrl() 은 사용자의 이메일 주소를 바탕으로 Exchange 서
     $ java -jar target/sbtest01-0.0.1-SNAPSHOT.jar
     ```
 	
-	![터미널(컴맨드) 쉘에서 JAR 파일 빌드하고 실행](../assets/images/sbbuild01.gif)
+	![터미널(컴맨드) 쉘에서 JAR 파일 빌드하고 실행](/assets/images/sbbuild01.gif)
 	
 ### 2. IntelliJ 에서 JAR 파일 빌드하고 실행
 * IntelliJ에서 생성된 프로젝트를 연다.  
 * 메뉴 "Build" -> "Build Project" 를 클릭하여 프로젝트를 빌드한다.  
 * 메뉴 "Run" -> "Run 프로젝트명" 를 클릭하여 프로젝트를 실행한다.  
 
-	![IntelliJ 에서 JAR 파일 빌드하고 실행](../assets/images/sbbuild02.gif)
+	![IntelliJ 에서 JAR 파일 빌드하고 실행](/assets/images/sbbuild02.gif)
 
 ***
 
@@ -261,12 +267,12 @@ http://localhost:8080//ews/user/inbox
 
 * 아래 화면과 같이 웹브라우져에 사용자의 받은편지함 제목들이 표시된다.  
 
-	![웹브라우져에 사용자의 받은편지함 제목 표시](../assets/images/wb_exchange_inbox_subject_01.png)
+	![웹브라우져에 사용자의 받은편지함 제목 표시](/assets/images/wb_exchange_inbox_subject_01.png)
 
 ***
 
 본 예제 결과물 sbtest02.zip 소스파일은 아래 링크에서 다운받을 수 있다.  
-<i class="nf nf-fa-archive"></i> [sbtest02.zip 소스파일]({{ "/assets/download/sbtest02.zip" | absolute_url }})
+<i class="nf nf-fa-archive"></i> [sbtest02.zip 소스파일](/assets/download/sbtest02.zip)
 
 ***
 
