--- a/docs/blog/2019-02-16-kang.heehun@introduce_vuetify.md
+++ b/docs/blog/2019-02-16-kang.heehun@introduce_vuetify.md
@@ -1,7 +1,13 @@
 ---
+published: true
 title: Vue-CLI 를 사용해 Vue.js 프로젝트를 생성하고 Vuetify 로 머터리얼 디자인 적용 하기
+categories: Spring
+tags: [Front-end, Vue.js, Vuetify, Material Design, Vue-CLI]
+layout: post
+excerpt: Vue-CLI 를 사용해 Vue.js 프로젝트를 생성하고 Vuetify 머터리얼 디자인을 적용해 본다.
+comments: yes
+toc: true
 date: 2019-02-16
-description: Vue-CLI 를 사용해 Vue.js 프로젝트를 생성하고 Vuetify 머터리얼 디자인을 적용해 본다.
 ---
 
 `Vue-CLI를 사용해서 Vue.js 프로젝트를 생성하고 Vuetify 머터리얼 디자인을 적용해 본다.`
@@ -21,7 +27,7 @@ Vuetify는 Vue.js를 위한 개발된 디자인 프레임워크이다.
 Vue.js로 프로젝트를 진행할때 Vuetify 를 사용하면 손쉽게 아름다운 디자인을 적용할 수 있다.
 
 Vuetify는 머터리얼 디자인 스펙 (Material Design Spec) 을 준수한다.  
-[Material Design Spec V2](https://material.io/design/){:target="_blank"}
+[Material Design Spec V2](https://material.io/design/)
 
 ***
 
@@ -37,18 +43,18 @@ NPM 설치에 관해서는 이전 글 [개발자 기본 개발 환경 설정]({%
 
 프로젝트를 생성하기전에 NPM 에서 Vue-CLI 를 먼저 설치해야 한다.
 * 터미널에서 아래 명령어를 실행한다.
-```text
+```bash
 $ npm install -g @vue/cli
 ```
 
 ### 2. Vue-CLI 를 사용해 Vue.js 프로젝트를 생성
 
 * 프로젝트를 생성할 폴더로 이동한 뒤 아래 명령어를 실행한다.
-```text
+```bash
 $ vue create vuetify01
 ```
 * "Please pick a preset:" 선택옵션에서 나오면 "default(babel, lint)" 항목을 선택한다.
-```text
+```bash
 ? Please pick a preset:
 ❯ default (babel, eslint)
   Manually select features
@@ -65,16 +71,16 @@ $ vue create vuetify01
 * 통합개발환경(IDE)에서 생성된 프로젝트를 연다.
 
 * Vue-CLI 가 많은 파일들을 생성해주는데, /src 폴더 이하에서 주로 작업을 하게되니 이부분을 주의 깊게 관찰하도록 한다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 소스](../assets/images/vuejs_project01.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 소스](/assets/images/vuejs_project01.png)
 
 ### 2. Vuetify 적용
 
 * 기본적으로 생성되는 프로젝트에는 Vuetify 가 적용되지 않으므로 터미널에서 아래 명령어로 Vuetify 를 적용한다.
-```text
+```bash
 $ vue add vuetify
 ```
 * 선택옵션에서는 "Default"를 선택하도록 한다.
-```text
+```bash
 ? Choose a preset: (Use arrow keys)
 ❯ Default (recommended) 
   Prototype (rapid development) 
@@ -84,21 +90,21 @@ $ vue add vuetify
 ### 3. NPM 으로 프로젝트 실행
 
 * NPM 명령으로 프로젝트를 실행해 볼 수 있다. 터미널에서 아래 명령어를 입력한다.
-```text
+```bash
 $ npm run serve
 ```
 
 ### 4. 웹브라우져에서 확인
 
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
-![Vuetify를 적용한 화면](../assets/images/vuejs_project02.png)
+![Vuetify를 적용한 화면](/assets/images/vuejs_project02.png)
 
 ## IV. Vue.js 프로젝트 수정
 
 ### 1. App.vue 파일 수정
 
 * App.vue 파일을 열어서 모든 "HelloWorld" 를 "HomeView"로 변경한다.
-{% raw %}
+::: v-pre
 ```html
 <template>
   <v-app>
@@ -139,18 +145,18 @@ export default {
 }
 </script>
 ```
-{% endraw %}
+:::
 
 ### 2. 새로운 Vue 컴포넌트 생성
 
 * /src/components 폴더에서 "HomeView.vue" 파일을 생성한다.
-![sr/components 폴더에 HomeVue.vue 파일을 생성](../assets/images/vuejs_project06.png)
+![sr/components 폴더에 HomeVue.vue 파일을 생성](/assets/images/vuejs_project06.png)
 
 ### 3. HomeView 컴포넌트 초기화
 
 * "HomeView.vue" 파일을 열어서 아래의 내용을 입력한다.  
 (아래 텍스트를 복사해서 붙여넣는다)
-{% raw %}
+::: v-pre
 ```html
 <template>
     <v-container>
@@ -201,7 +207,7 @@ export default {
     }
 </script>
 ```
-{% endraw %}
+:::
 
 지금처럼 생성한 HomeView을 Single File Component 라고 부른다.  
 "&lt;template&gt;" 태그안에는 이 컴포넌트의 외형을 표현하는 HTML 템플릿을 작성하고  
@@ -214,12 +220,12 @@ export default {
 ### 4. 웹브라우져에서 확인
 
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](../assets/images/vuejs_project03.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](/assets/images/vuejs_project03.png)
 
 ### 5. 제품 데이타 추가
 
 * script 영역의 data 아래의 "products" 배열값을 아래 내용으로 수정한다.
-{% raw %}
+::: v-pre
 ```javascript
 products: [
     {
@@ -245,12 +251,12 @@ products: [
     },
 ],
 ```
-{% endraw %}
+:::
 
 ### 6. 제품 템플릿 수정
 
 * template 영역에서 첫번째 &lt;v-card&gt; 태그를 아래 내용으로 수정한다.
-{% raw %}
+::: v-pre
 ```html
 <v-card v-for="product in products" :key="product.id">
     <v-layout>
@@ -267,16 +273,16 @@ products: [
     </v-layout>
 </v-card>
 ```
-{% endraw %}
+:::
 
 ### 7. 웹브라우져에서 확인
 
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](../assets/images/vuejs_project04.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](/assets/images/vuejs_project04.png)
 
 ### 8. 장바구니 템플릿 수정
 * template 영역에서 두번 &lt;v-card&gt; 태그를 아래 내용으로 수정한다.
-{% raw %}
+::: v-pre
 ```html
 <v-card v-for="cartItem in cartItems" :key="'C' + cartItem.id">
     <v-layout>
@@ -290,7 +296,7 @@ products: [
     </v-layout>
 </v-card>
 ```
-{% endraw %}
+:::
 
 ### 9. "ADD CART" 버튼 이벤트 핸들러 구현
 * methods 속성 아래와 같이 addToCart() 함수를 구현한다.
@@ -344,11 +350,9 @@ addToCart: function (product) {
 * 웹브라우져에서 아래 주소로 접속하면 프로젝트 실행 결과 화면을 볼 수 있다.
 * 각 제품들의 "ADD CART" 버튼을 클릭하면 "My Cart Items" 아래에 추가됨을 확인 할 수 있다.
 * 각 항목마다 "가격 x 수량"으로 소계를 계산하여 표시해 주었고, "My Cart Items" 옆에에는 총계가 표시된다.
-![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](../assets/images/vuejs_project05.png)
+![Vue-CLI 로 생성된 Vue.js 프로젝트 결과화면](/assets/images/vuejs_project05.png)
 
 ***
 
 본 예제 결과물 vuetify02.zip 소스파일은 아래 링크에서 다운받을 수 있다.  
-<i class="nf nf-fa-archive"></i> [vuetify02.zip 소스파일]({{ "/assets/download/vuetify02.zip" | absolute_url }})
-
-***
+<i class="nf nf-fa-archive"></i> [vuetify02.zip 소스파일](/assets/download/vuetify02.zip)
